# payment_rust_evolution

./: .env.example  Cargo.toml  ERRORS.md  HANDLER.md  MAIN.md  MODEL_AND_VALIDAT.md  README.md  REPOSITORY.md  ROUTE.md  SERVICE.md  SQLx.md  TESTES.md  TESTES_INTEGRACAO.md  TESTES_INTEGRACAO_DB.md  TESTES_UNITARIOS.md  TESTES_UNITARIOS_SERVICE_MOCK.md
.github/: copilot-instructions.md
docker/: Dockerfile  docker-compose.yml  init.sql
src/: main.rs
src/error/: errors.rs
src/handler/: client_handler.rs
src/model/: mod.rs  plan_model.rs
src/repository/: client_repository.rs  mod.rs  sqlx_client_repository.rs
src/routes/: client_routes.rs
src/service/: client_service.rs
